--- a/GYMNASIEARBETE/views/food/food_page.erb
+++ b/GYMNASIEARBETE/views/food/food_page.erb
@@ -11,7 +11,7 @@
 
 <br><br><br>
 
-<a href="/add5pointsto/<%= @food.id %>">Lägg 5 poäng</a>
+<a href="/mat/5p/<%= @food.id %>">Lägg 5 poäng</a>
 
 <br><br><br>
 
