--- a/GYMNASIEARBETE/views/account/nologin.erb
+++ b/GYMNASIEARBETE/views/account/nologin.erb
@@ -17,8 +17,10 @@
   <h3>Är du ny här? Regristrera här i så fall!</h3>
     <form action="/register_account" method="post">
       <div class="input">
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
+        <input type="text" name="username" placeholder="Användarnamn">
+        <input type="password" name="password" placeholder="Lösenord">
+        <input type="text" name="firstname" placeholder="Förnamn">
+        <input type="text" name="lastname" placeholder="Efternamn">
       </div>
       <button type="submit">Register</button>
   </form>
