--- a/GYMNASIEARBETE/views/index.erb
+++ b/GYMNASIEARBETE/views/index.erb
@@ -1,42 +1,30 @@
 <form action="/upload" enctype="multipart/form-data" method="post">
-  <label for="file">Bild att ladda upp:</label>
-  <input id="file" type="file" name="file">
-  <input id="submit" type="submit" name="submit" value="Ladda upp bilden!">
+  <input name="file" type="file" accept="image/*" id="files"/>
+  <img id="image_file" class="preview_img" />
+  <input type="submit" value="Ladda upp bilden" />
 </form>
-
-<div class="col-sm-8 img-upload-section">
-  <input name="image3" type="file" accept="image/*" id="menu_images"/>
-  <img id="menu_image" class="preview_img" />
-  <input type="submit" value="Submit" />
-</div>
 
 <script>
 
-  document.getElementById("menu_images").onchange = function () {
+  document.getElementById("files").onchange = function () {
   var reader = new FileReader();
-  if(this.files[0].size>528385){
-  alert("Image Size should not be greater than 500Kb");
-  $("#menu_image").attr("src","blank");
-  $("#menu_image").hide();
-  $('#menu_images').wrap('<form>').closest('form').get(0).reset();
-    $('#menu_images').unwrap();
-    return false;
-    }
+    if(this.files[0].size>528385){
+      alert("Bilden bör inte ha en storlek över 500Kb");
+      document.getElementById("files").value=""; //clear the uploaded file
+      return false;
+      }
     if(this.files[0].type.indexOf("image")==-1){
-    alert("Invalid Type");
-    $("#menu_image").attr("src","blank");
-    $("#menu_image").hide();
-    $('#menu_images').wrap('<form>').closest('form').get(0).reset();
-    $('#menu_images').unwrap();
-    return false;
+      alert("Filen du har valt är inte en bild");
+      document.getElementById("files").value="";
+      return false;
     }
     reader.onload = function (e) {
-    document.getElementById("menu_image").src = e.target.result;
-    $("#menu_image").show();
+    document.getElementById("file").src = e.target.result;
+    $("#file").show();
     };
 
-    reader.readAsDataURL(this.files[0]);
-    };
+  reader.readAsDataURL(this.files[0]);
+  };
 
 </script>
 
