--- a/GYMNASIEARBETE/views/layout.erb
+++ b/GYMNASIEARBETE/views/layout.erb
@@ -19,7 +19,7 @@
           <li><a href="/inte_inloggad/p"><%= @account %></a></li>
       <% end %>
       <li><a href="/mat/sok">Sökning</a></li>
-      <li><a href="/mat/kategorier">Kategorier</a></li>
+      <li><a href="/kategorier/alla_kategorier">Kategorier</a></li>
       <li><a href="/mat/sparade">Sparade Maträtter</a></li>
       <li><a href="/mat/skapade">Egna Maträtter</a></li>
 
