--- a/GYMNASIEARBETE/public/css/site.css
+++ b/GYMNASIEARBETE/public/css/site.css
@@ -62,6 +62,25 @@ h2#account_message {
     transition-duration: 0.5s;
 }
 
+#content_container textarea {
+    width: 80%;
+    margin: 8px 10%;
+    height: 150px;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    border: 2px solid transparent;
+    border-bottom: 2px solid red;
+    border-radius: 4px;
+    background-color: white;
+    resize: none;
+}
+
+#content_container textarea:focus {
+    background-color: pink;
+    border: 2px solid red;
+    transition-duration: 0.5s;
+}
+
 #content_container .foodlist {
     float: left;
     width: 46%;
