--- a/GYMNASIEARBETE/views/index.erb
+++ b/GYMNASIEARBETE/views/index.erb
@@ -1,31 +1,1 @@
-<form action="/upload" enctype="multipart/form-data" method="post">
-  <input name="file" type="file" accept="image/*" id="files"/>
-  <img id="image_file" class="preview_img" />
-  <input type="submit" value="Ladda upp bilden" />
-</form>
-
-<script>
-
-  document.getElementById("files").onchange = function () {
-  var reader = new FileReader();
-    if(this.files[0].size>528385){
-      alert("Bilden bör inte ha en storlek över 500Kb");
-      document.getElementById("files").value=""; //clear the uploaded file
-      return false;
-      }
-    if(this.files[0].type.indexOf("image")==-1){
-      alert("Filen du har valt är inte en bild");
-      document.getElementById("files").value="";
-      return false;
-    }
-    reader.onload = function (e) {
-    document.getElementById("file").src = e.target.result;
-    $("#file").show();
-    };
-
-  reader.readAsDataURL(this.files[0]);
-  };
-
-</script>
-
-<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus assumenda deserunt doloremque ex excepturi rerum similique tempore vel? Consequuntur dolorum esse fugit nihil? Accusamus blanditiis impedit laboriosam molestias non vel.</h2>
+<p>Startsidan under kontruktion...</p>
