--- a/GYMNASIEARBETE/views/account/my_account.erb
+++ b/GYMNASIEARBETE/views/account/my_account.erb
@@ -1,38 +1,11 @@
-<h1><%= "#{@profile.firstname} #{@profile.lastname}" %></h1>
-<h3><%= @profile.username %></h3>
-<br><br><br>
-<p><%= @profile.description %></p>
-
 <img src=<%= @profile.picture %> alt="<%= @profile.id %>.jpg">
 
-<h1><%= "/img/uploads/profile/#{@profile.id}/#{@profile.id}.jpg" %></h1>
+<h1><%= "#{@profile.firstname} #{@profile.lastname}" %></h1>
 
-<form action="/profile_pic/upload" enctype="multipart/form-data" method="post">
-  <input name="file" type="file" accept="image/*" id="files"/>
-  <img id="image_file" class="preview_img" />
-  <input type="submit" value="Ladda upp bilden" />
-</form>
+<h3><%= @profile.username %></h3>
 
-<script>
+<br><br><br>
 
-  document.getElementById("files").onchange = function () {
-    var reader = new FileReader();
-    if(this.files[0].size>528385){
-      alert("Bilden bör inte ha en storlek över 500Kb");
-      document.getElementById("files").value=""; //clear the uploaded file
-      return false;
-    }
-    if(this.files[0].type.indexOf("image")==-1){
-      alert("Filen du har valt är inte en bild");
-      document.getElementById("files").value="";
-      return false;
-    }
-    reader.onload = function (e) {
-      document.getElementById("file").src = e.target.result;
-      $("#file").show();
-    };
+<p><%= @profile.description %></p>
 
-    reader.readAsDataURL(this.files[0]);
-  };
-
-</script>
+<a href="edit"><h1>Uppdatera informationen</h1></a>
