--- a/GYMNASIEARBETE/views/food/food_page.erb
+++ b/GYMNASIEARBETE/views/food/food_page.erb
@@ -43,5 +43,5 @@
             <h3><%= @users.first(id: subcomment.user_id).username %>: <%=subcomment.text%></h3>
         <% end %>
     <% end %>
-    <form action="/postsubcomment/<%= @food.id %>" method="post"><input type="text" name="comment" placeholder="Kommentera..."><button type="submit">Kommentera</button></form>
+    <form action="/postsubcomment/<%= comment.id %>" method="post"><input type="text" name="comment" placeholder="Kommentera..."><button type="submit">Kommentera</button></form>
 <% end %>
